Bug #44137 Transactional DDL locking broke dynamic plugins remove all mdl lock requests from the memory root before it's reset in the read_record loop